# yolo_inspection_kit

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml  requirements.txt  validate_setup.py
config/: default_config.yaml
examples/: basic_usage.py  code_config_examples.py
yolo_inspection_kit/: __init__.py  config_loader.py  core.py  result_analyzer.py
